force-app/main/default/objects/MUSW__Bond__c/MUSW__Bond__c.object-meta.xml
<CustomObject>
    <label>Bond</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>