force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Available_Amount__c</fullName>
    <description>Available amount on a bond for distribution</description>
    <formula>IF(  ISPICKVAL( MUSW__Status__c , &quot;Posted&quot;) , MUSW__BG_Amount__c -  MUSW__Distributed_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>