force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__BG_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Amount__c</fullName>
    <label>Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>