force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__BG_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>