force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__BG_Insurer__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surety</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bonds as Surety</relationshipLabel>
    <relationshipName>Bonds</relationshipName>
    <type>Lookup</type>
</CustomField>