force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__BG_Purpose__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor and Materials</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>