force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__BG_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>