force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__Distributed_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Distributed_Amount__c</fullName>
    <description>The amount that has distributed to permits.</description>
    <label>Distributed Amount</label>
    <summarizedField>MUSW__Permit_Bond__c.MUSW__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>MUSW__Permit_Bond__c.MUSW__Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>MUSW__Permit_Bond__c.MUSW__Bond__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>