force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__Principal__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Principal__c</fullName>
    <label>Principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>