force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__Principal_Account__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Principal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bonds as Principal</relationshipLabel>
    <relationshipName>Principal_Bonds</relationshipName>
    <type>Lookup</type>
</CustomField>