force-app/main/default/objects/MUSW__Bond__c/fields/MUSW__Released_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Released_Date__c</fullName>
    <label>Released Date</label>
    <type>Date</type>
</CustomField>