force-app/main/default/objects/MUSW__Bond__c/recordTypes/MUSW__Cash_Bond.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Cash_Bond</fullName>
    <active>true</active>
    <label>Cash Bond</label>
</RecordType>