force-app/main/default/objects/MUSW__Bond__c/recordTypes/MUSW__Surety_Bond.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Surety_Bond</fullName>
    <active>true</active>
    <label>Surety Bond</label>
</RecordType>