force-app/main/default/objects/MUSW__Bond__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__BG_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MUSW__BG_Insurer__c</columns>
    <columns>MUSW__Principal__c</columns>
    <columns>MUSW__BG_Expiry_Date__c</columns>
    <columns>MUSW__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>